backend/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrs
Rule 2     instrs -> instrs instr
Rule 3     instrs -> instrs interface_instr
Rule 4     instrs -> instr
Rule 5     instrs -> interface_instr
Rule 6     instr -> statement SEMICOLON
Rule 7     instr -> statement_pop SEMICOLON
Rule 8     instr -> statement_push SEMICOLON
Rule 9     instr -> if_instr
Rule 10    instr -> switch_instr
Rule 11    instr -> while_instr
Rule 12    instr -> for_instr
Rule 13    instr -> for_each_instr
Rule 14    instr -> break_instr
Rule 15    instr -> continue_instr
Rule 16    instr -> console_instr
Rule 17    instr -> function_instr
Rule 18    instr -> return_instr
Rule 19    instr -> function_call_instr SEMICOLON
Rule 20    interface_instr -> INTERFACE ID LBRACE interface_params RBRACE
Rule 21    interface_params -> interface_params ID COLON function_type SEMICOLON
Rule 22    interface_params -> ID COLON function_type SEMICOLON
Rule 23    function_instr -> FUNCTION ID LPAREN function_params RPAREN COLON function_type LBRACE instrs RBRACE
Rule 24    function_instr -> FUNCTION ID LPAREN function_params RPAREN LBRACE instrs RBRACE
Rule 25    function_type -> TYPE matriz_dimensions
Rule 26    function_type -> TYPE
Rule 27    function_type -> ID matriz_dimensions
Rule 28    function_type -> ID
Rule 29    function_params -> function_params COMMA ID COLON function_type
Rule 30    function_params -> ID COLON function_type
Rule 31    function_params -> <empty>
Rule 32    function_call_instr -> ID LPAREN values RPAREN
Rule 33    function_call_instr -> ID LPAREN RPAREN
Rule 34    return_instr -> RETURN statement_assign_value SEMICOLON
Rule 35    console_instr -> CONSOLE DOT LOG LPAREN values RPAREN SEMICOLON
Rule 36    statement -> var_type ID statement_assign
Rule 37    statement -> var_type ID COLON statement_type statement_assign
Rule 38    statement -> ID statement_assign
Rule 39    statement -> var_type ID COLON statement_type matriz_dimensions ASSIGN matriz_dimensions_values
Rule 40    statement_type -> TYPE
Rule 41    statement_type -> ID
Rule 42    statement -> ID matriz_dimensions_access ASSIGN statement_assign_value
Rule 43    statement -> interface_dimensions_access statement_assign
Rule 44    interface_dimensions_access -> interface_dimensions_access DOT factor
Rule 45    interface_dimensions_access -> factor DOT factor
Rule 46    statement_push -> factor DOT PUSH LPAREN statement_assign_value RPAREN
Rule 47    statement_pop -> factor DOT POP LPAREN RPAREN
Rule 48    matriz_dimensions -> matriz_dimensions LBRACKET RBRACKET
Rule 49    matriz_dimensions -> LBRACKET RBRACKET
Rule 50    matriz_dimensions_access -> matriz_dimensions_access LBRACKET statement_assign_value RBRACKET
Rule 51    matriz_dimensions_access -> LBRACKET statement_assign_value RBRACKET
Rule 52    matriz_dimensions_values -> LBRACKET elements RBRACKET
Rule 53    matriz_dimensions_values -> LBRACKET RBRACKET
Rule 54    elements -> elements COMMA element
Rule 55    elements -> element
Rule 56    element -> statement_assign_value
Rule 57    element -> matriz_dimensions_values
Rule 58    values -> values COMMA statement_assign_value
Rule 59    values -> statement_assign_value
Rule 60    var_type -> VAR
Rule 61    var_type -> CONST
Rule 62    statement_assign -> ASSIGN statement_assign_value
Rule 63    statement_assign -> ASSIGNMENTOPERATOR statement_assign_value
Rule 64    statement_assign -> ASSIGNMENTOPERATOR2
Rule 65    statement_assign -> ASSIGN LBRACE statement_assign_interface RBRACE
Rule 66    statement_assign_interface -> statement_assign_interface COMMA ID COLON statement_assign_value
Rule 67    statement_assign_interface -> ID COLON statement_assign_value
Rule 68    statement_assign_value -> ternary_operator
Rule 69    statement_assign_value -> logical
Rule 70    statement_assign_value -> statement_pop
Rule 71    statement_assign_value -> statement_push
Rule 72    ternary_operator -> relation QUESTIONMARK relation COLON relation
Rule 73    if_instr -> IF LPAREN logical RPAREN LBRACE instrs RBRACE
Rule 74    if_instr -> IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE LBRACE instrs RBRACE
Rule 75    if_instr -> IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE if_instr
Rule 76    switch_instr -> SWITCH LPAREN logical RPAREN LBRACE cases RBRACE
Rule 77    cases -> cases case
Rule 78    cases -> case
Rule 79    case -> CASE logical COLON instrs
Rule 80    case -> DEFAULT COLON instrs
Rule 81    break_instr -> BREAK SEMICOLON
Rule 82    continue_instr -> CONTINUE SEMICOLON
Rule 83    while_instr -> WHILE LPAREN logical RPAREN LBRACE instrs RBRACE
Rule 84    for_instr -> FOR LPAREN statement SEMICOLON logical SEMICOLON statement RPAREN LBRACE instrs RBRACE
Rule 85    for_each_instr -> FOR LPAREN var_type ID OF factor RPAREN LBRACE instrs RBRACE
Rule 86    logical -> logical LOGICALOPERATOR relation
Rule 87    logical -> relation
Rule 88    relation -> relation RELATIONALOPERATOR arithmetic
Rule 89    relation -> arithmetic
Rule 90    arithmetic -> arithmetic arithmetic_operador_low term
Rule 91    arithmetic -> term
Rule 92    term -> term ARITHMETICOPERATORHIGH factor_function
Rule 93    term -> factor_function
Rule 94    factor_function -> factor DOT INDEXOF LPAREN factor RPAREN
Rule 95    factor_function -> factor DOT TOSTRING LPAREN RPAREN
Rule 96    factor_function -> factor DOT JOIN LPAREN RPAREN
Rule 97    factor_function -> factor DOT LENGTH
Rule 98    factor_function -> factor DOT TOLOWERCASE LPAREN RPAREN
Rule 99    factor_function -> factor DOT TOUPPERCASE LPAREN RPAREN
Rule 100   factor_function -> OBJECT DOT KEYS LPAREN factor RPAREN
Rule 101   factor_function -> OBJECT DOT VALUES LPAREN factor RPAREN
Rule 102   factor_function -> PARSEINT LPAREN factor RPAREN
Rule 103   factor_function -> PARSEFLOAT LPAREN factor RPAREN
Rule 104   factor_function -> factor
Rule 105   factor_function -> interface_dimensions_access
Rule 106   factor -> TYPEOF factor
Rule 107   factor -> ID
Rule 108   factor -> FLOAT
Rule 109   factor -> STRING
Rule 110   factor -> NUMBER
Rule 111   factor -> ID matriz_dimensions_access
Rule 112   factor -> LPAREN logical RPAREN
Rule 113   factor -> MINUS LPAREN NUMBER RPAREN
Rule 114   factor -> MINUS LPAREN FLOAT RPAREN
Rule 115   factor -> LOGICALNEGATION factor
Rule 116   factor -> TRUE
Rule 117   factor -> FALSE
Rule 118   factor -> function_call_instr
Rule 119   arithmetic_operador_low -> PLUS
Rule 120   arithmetic_operador_low -> MINUS

Terminals, with rules where they appear

ARITHMETICOPERATORHIGH : 92
ASSIGN               : 39 42 62 65
ASSIGNMENTOPERATOR   : 63
ASSIGNMENTOPERATOR2  : 64
BREAK                : 81
CASE                 : 79
COLON                : 21 22 23 29 30 37 39 66 67 72 79 80
COMMA                : 29 54 58 66
CONSOLE              : 35
CONST                : 61
CONTINUE             : 82
DEFAULT              : 80
DOT                  : 35 44 45 46 47 94 95 96 97 98 99 100 101
ELSE                 : 74 75
FALSE                : 117
FLOAT                : 108 114
FOR                  : 84 85
FUNCTION             : 23 24
ID                   : 20 21 22 23 24 27 28 29 30 32 33 36 37 38 39 41 42 66 67 85 107 111
IF                   : 73 74 75
INDEXOF              : 94
INTERFACE            : 20
JOIN                 : 96
KEYS                 : 100
LBRACE               : 20 23 24 65 73 74 74 75 76 83 84 85
LBRACKET             : 48 49 50 51 52 53
LENGTH               : 97
LOG                  : 35
LOGICALNEGATION      : 115
LOGICALOPERATOR      : 86
LPAREN               : 23 24 32 33 35 46 47 73 74 75 76 83 84 85 94 95 96 98 99 100 101 102 103 112 113 114
MINUS                : 113 114 120
NUMBER               : 110 113
OBJECT               : 100 101
OF                   : 85
PARSEFLOAT           : 103
PARSEINT             : 102
PLUS                 : 119
POP                  : 47
PUSH                 : 46
QUESTIONMARK         : 72
RBRACE               : 20 23 24 65 73 74 74 75 76 83 84 85
RBRACKET             : 48 49 50 51 52 53
RELATIONALOPERATOR   : 88
RETURN               : 34
RPAREN               : 23 24 32 33 35 46 47 73 74 75 76 83 84 85 94 95 96 98 99 100 101 102 103 112 113 114
SEMICOLON            : 6 7 8 19 21 22 34 35 81 82 84 84
STRING               : 109
SWITCH               : 76
TOLOWERCASE          : 98
TOSTRING             : 95
TOUPPERCASE          : 99
TRUE                 : 116
TYPE                 : 25 26 40
TYPEOF               : 106
VALUES               : 101
VAR                  : 60
WHILE                : 83
error                : 

Nonterminals, with rules where they appear

arithmetic           : 88 89 90
arithmetic_operador_low : 90
break_instr          : 14
case                 : 77 78
cases                : 76 77
console_instr        : 16
continue_instr       : 15
element              : 54 55
elements             : 52 54
factor               : 44 45 45 46 47 85 94 94 95 96 97 98 99 100 101 102 103 104 106 115
factor_function      : 92 93
for_each_instr       : 13
for_instr            : 12
function_call_instr  : 19 118
function_instr       : 17
function_params      : 23 24 29
function_type        : 21 22 23 29 30
if_instr             : 9 75
init                 : 0
instr                : 2 4
instrs               : 1 2 3 23 24 73 74 74 75 79 80 83 84 85
interface_dimensions_access : 43 44 105
interface_instr      : 3 5
interface_params     : 20 21
logical              : 69 73 74 75 76 79 83 84 86 112
matriz_dimensions    : 25 27 39 48
matriz_dimensions_access : 42 50 111
matriz_dimensions_values : 39 57
relation             : 72 72 72 86 87 88
return_instr         : 18
statement            : 6 84 84
statement_assign     : 36 37 38 43
statement_assign_interface : 65 66
statement_assign_value : 34 42 46 50 51 56 58 59 62 63 66 67
statement_pop        : 7 70
statement_push       : 8 71
statement_type       : 37 39
switch_instr         : 10
term                 : 90 91 92
ternary_operator     : 68
values               : 32 35 58
var_type             : 36 37 39 85
while_instr          : 11

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrs
    (2) instrs -> . instrs instr
    (3) instrs -> . instrs interface_instr
    (4) instrs -> . instr
    (5) instrs -> . interface_instr
    (6) instr -> . statement SEMICOLON
    (7) instr -> . statement_pop SEMICOLON
    (8) instr -> . statement_push SEMICOLON
    (9) instr -> . if_instr
    (10) instr -> . switch_instr
    (11) instr -> . while_instr
    (12) instr -> . for_instr
    (13) instr -> . for_each_instr
    (14) instr -> . break_instr
    (15) instr -> . continue_instr
    (16) instr -> . console_instr
    (17) instr -> . function_instr
    (18) instr -> . return_instr
    (19) instr -> . function_call_instr SEMICOLON
    (20) interface_instr -> . INTERFACE ID LBRACE interface_params RBRACE
    (36) statement -> . var_type ID statement_assign
    (37) statement -> . var_type ID COLON statement_type statement_assign
    (38) statement -> . ID statement_assign
    (39) statement -> . var_type ID COLON statement_type matriz_dimensions ASSIGN matriz_dimensions_values
    (42) statement -> . ID matriz_dimensions_access ASSIGN statement_assign_value
    (43) statement -> . interface_dimensions_access statement_assign
    (47) statement_pop -> . factor DOT POP LPAREN RPAREN
    (46) statement_push -> . factor DOT PUSH LPAREN statement_assign_value RPAREN
    (73) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE
    (74) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE LBRACE instrs RBRACE
    (75) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE if_instr
    (76) switch_instr -> . SWITCH LPAREN logical RPAREN LBRACE cases RBRACE
    (83) while_instr -> . WHILE LPAREN logical RPAREN LBRACE instrs RBRACE
    (84) for_instr -> . FOR LPAREN statement SEMICOLON logical SEMICOLON statement RPAREN LBRACE instrs RBRACE
    (85) for_each_instr -> . FOR LPAREN var_type ID OF factor RPAREN LBRACE instrs RBRACE
    (81) break_instr -> . BREAK SEMICOLON
    (82) continue_instr -> . CONTINUE SEMICOLON
    (35) console_instr -> . CONSOLE DOT LOG LPAREN values RPAREN SEMICOLON
    (23) function_instr -> . FUNCTION ID LPAREN function_params RPAREN COLON function_type LBRACE instrs RBRACE
    (24) function_instr -> . FUNCTION ID LPAREN function_params RPAREN LBRACE instrs RBRACE
    (34) return_instr -> . RETURN statement_assign_value SEMICOLON
    (32) function_call_instr -> . ID LPAREN values RPAREN
    (33) function_call_instr -> . ID LPAREN RPAREN
    (60) var_type -> . VAR
    (61) var_type -> . CONST
    (44) interface_dimensions_access -> . interface_dimensions_access DOT factor
    (45) interface_dimensions_access -> . factor DOT factor
    (106) factor -> . TYPEOF factor
    (107) factor -> . ID
    (108) factor -> . FLOAT
    (109) factor -> . STRING
    (110) factor -> . NUMBER
    (111) factor -> . ID matriz_dimensions_access
    (112) factor -> . LPAREN logical RPAREN
    (113) factor -> . MINUS LPAREN NUMBER RPAREN
    (114) factor -> . MINUS LPAREN FLOAT RPAREN
    (115) factor -> . LOGICALNEGATION factor
    (116) factor -> . TRUE
    (117) factor -> . FALSE
    (118) factor -> . function_call_instr

    INTERFACE       shift and go to state 19
    ID              shift and go to state 20
    IF              shift and go to state 25
    SWITCH          shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    CONSOLE         shift and go to state 31
    FUNCTION        shift and go to state 32
    RETURN          shift and go to state 33
    VAR             shift and go to state 34
    CONST           shift and go to state 35
    TYPEOF          shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 40
    LOGICALNEGATION shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    init                           shift and go to state 1
    instrs                         shift and go to state 2
    instr                          shift and go to state 3
    interface_instr                shift and go to state 4
    statement                      shift and go to state 5
    statement_pop                  shift and go to state 6
    statement_push                 shift and go to state 7
    if_instr                       shift and go to state 8
    switch_instr                   shift and go to state 9
    while_instr                    shift and go to state 10
    for_instr                      shift and go to state 11
    for_each_instr                 shift and go to state 12
    break_instr                    shift and go to state 13
    continue_instr                 shift and go to state 14
    console_instr                  shift and go to state 15
    function_instr                 shift and go to state 16
    return_instr                   shift and go to state 17
    function_call_instr            shift and go to state 18
    var_type                       shift and go to state 21
    interface_dimensions_access    shift and go to state 22
    factor                         shift and go to state 23

state 1

    (0) S' -> init .



state 2

    (1) init -> instrs .
    (2) instrs -> instrs . instr
    (3) instrs -> instrs . interface_instr
    (6) instr -> . statement SEMICOLON
    (7) instr -> . statement_pop SEMICOLON
    (8) instr -> . statement_push SEMICOLON
    (9) instr -> . if_instr
    (10) instr -> . switch_instr
    (11) instr -> . while_instr
    (12) instr -> . for_instr
    (13) instr -> . for_each_instr
    (14) instr -> . break_instr
    (15) instr -> . continue_instr
    (16) instr -> . console_instr
    (17) instr -> . function_instr
    (18) instr -> . return_instr
    (19) instr -> . function_call_instr SEMICOLON
    (20) interface_instr -> . INTERFACE ID LBRACE interface_params RBRACE
    (36) statement -> . var_type ID statement_assign
    (37) statement -> . var_type ID COLON statement_type statement_assign
    (38) statement -> . ID statement_assign
    (39) statement -> . var_type ID COLON statement_type matriz_dimensions ASSIGN matriz_dimensions_values
    (42) statement -> . ID matriz_dimensions_access ASSIGN statement_assign_value
    (43) statement -> . interface_dimensions_access statement_assign
    (47) statement_pop -> . factor DOT POP LPAREN RPAREN
    (46) statement_push -> . factor DOT PUSH LPAREN statement_assign_value RPAREN
    (73) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE
    (74) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE LBRACE instrs RBRACE
    (75) if_instr -> . IF LPAREN logical RPAREN LBRACE instrs RBRACE ELSE if_instr
    (76) switch_instr -> . SWITCH LPAREN logical RPAREN LBRACE cases RBRACE
    (83) while_instr -> . WHILE LPAREN logical RPAREN LBRACE instrs RBRACE
    (84) for_instr -> . FOR LPAREN statement SEMICOLON logical SEMICOLON statement RPAREN LBRACE instrs RBRACE
    (85) for_each_instr -> . FOR LPAREN var_type ID OF factor RPAREN LBRACE instrs RBRACE
    (81) break_instr -> . BREAK SEMICOLON
    (82) continue_instr -> . CONTINUE SEMICOLON
    (35) console_instr -> . CONSOLE DOT LOG LPAREN values RPAREN SEMICOLON
    (23) function_instr -> . FUNCTION ID LPAREN function_params RPAREN COLON function_type LBRACE instrs RBRACE
    (24) function_instr -> . FUNCTION ID LPAREN function_params RPAREN LBRACE instrs RBRACE
    (34) return_instr -> . RETURN statement_assign_value SEMICOLON
    (32) function_call_instr -> . ID LPAREN values RPAREN
    (33) function_call_instr -> . ID LPAREN RPAREN
    (60) var_type -> . VAR
    (61) var_type -> . CONST
    (44) interface_dimensions_access -> . interface_dimensions_access DOT factor
    (45) interface_dimensions_access -> . factor DOT factor
    (106) factor -> . TYPEOF factor
    (107) factor -> . ID
    (108) factor -> . FLOAT
    (109) factor -> . STRING
    (110) factor -> . NUMBER
    (111) factor -> . ID matriz_dimensions_access
    (112) factor -> . LPAREN logical RPAREN
    (113) factor -> . MINUS LPAREN NUMBER RPAREN
    (114) factor -> . MINUS LPAREN FLOAT RPAREN
    (115) factor -> . LOGICALNEGATION factor
    (116) factor -> . TRUE
    (117) factor -> . FALSE
    (118) factor -> . function_call_instr

    $end            reduce using rule 1 (init -> instrs .)
    INTERFACE       shift and go to state 19
    ID              shift and go to state 20
    IF              shift and go to state 25
    SWITCH          shift and go to state 26
    WHILE           shift and go to state 27
    FOR             shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    CONSOLE         shift and go to state 31
    FUNCTION        shift and go to state 32
    RETURN          shift and go to state 33
    VAR             shift and go to state 34
    CONST           shift and go to state 35
    TYPEOF          shift and go to state 36
    FLOAT           shift and go to state 37
    STRING          shift and go to state 38
    NUMBER          shift and go to state 39
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 40
    LOGICALNEGATION shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43

    instr                          shift and go to state 44
    interface_instr                shift and go to state 45
    statement                      shift and go to state 5
    statement_pop                  shift and go to state 6
    statement_push                 shift and go to state 7
    if_instr                       shift and go to state 8
    switch_instr                   shift and go to state 9
    while_instr                    shift and go to state 10
    for_instr                      shift and go to state 11
    for_each_instr                 shift and go to state 12
    break_instr                    shift and go to state 13
    continue_instr                 shift and go to state 14
    console_instr                  shift and go to state 15
    function_instr                 shift and go to state 16
    return_instr                   shift and go to state 17
    function_call_instr            shift and go to state 18
    var_type                       shift and go to state 21
    interface_dimensions_access    shift and go to state 22
    factor                         shift and go to state 23

state 3

    (4) instrs -> instr .

    INTERFACE       reduce using rule 4 (instrs -> instr .)
    ID              reduce using rule 4 (instrs -> instr .)
    IF              reduce using rule 4 (instrs -> instr .)
    SWITCH          reduce using rule 4 (instrs -> instr .)
    WHILE           reduce using rule 4 (instrs -> instr .)
    FOR             reduce using rule 4 (instrs -> instr .)
    BREAK           reduce using rule 4 (instrs -> instr .)
    CONTINUE        reduce using rule 4 (instrs -> instr .)
    CONSOLE         reduce using rule 4 (instrs -> instr .)
    FUNCTION        reduce using rule 4 (instrs -> instr .)
    RETURN          reduce using rule 4 (instrs -> instr .)
    VAR             reduce using rule 4 (instrs -> instr .)
    CONST           reduce using rule 4 (instrs -> instr .)
    TYPEOF          reduce using rule 4 (instrs -> instr .)
    FLOAT           reduce using rule 4 (instrs -> instr .)
    STRING          reduce using rule 4 (instrs -> instr .)
    NUMBER          reduce using rule 4 (instrs -> instr .)
    LPAREN          reduce using rule 4 (instrs -> instr .)
    MINUS           reduce using rule 4 (instrs -> instr .)
    LOGICALNEGATION reduce using rule 4 (instrs -> instr .)
    TRUE            reduce using rule 4 (instrs -> instr .)
    FALSE           reduce using rule 4 (instrs -> instr .)
    $end            reduce using rule 4 (instrs -> instr .)
    RBRACE          reduce using rule 4 (instrs -> instr .)
    CASE            reduce using rule 4 (instrs -> instr .)
    DEFAULT         reduce using rule 4 (instrs -> instr .)


state 4

    (5) instrs -> interface_instr .

    INTERFACE       reduce using rule 5 (instrs -> interface_instr .)
    ID              reduce using rule 5 (instrs -> interface_instr .)
    IF              reduce using rule 5 (instrs -> interface_instr .)
    SWITCH          reduce using rule 5 (instrs -> interface_instr .)
    WHILE           reduce using rule 5 (instrs -> interface_instr .)
    FOR             reduce using rule 5 (instrs -> interface_instr .)
    BREAK           reduce using rule 5 (instrs -> interface_instr .)
    CONTINUE        reduce using rule 5 (instrs -> interface_instr .)
    CONSOLE         reduce using rule 5 (instrs -> interface_instr .)
    FUNCTION        reduce using rule 5 (instrs -> interface_instr .)
    RETURN          reduce using rule 5 (instrs -> interface_instr .)
    VAR             reduce using rule 5 (instrs -> interface_instr .)
    CONST           reduce using rule 5 (instrs -> interface_instr .)
    TYPEOF          reduce using rule 5 (instrs -> interface_instr .)
    FLOAT           reduce using rule 5 (instrs -> interface_instr .)
    STRING          reduce using rule 5 (instrs -> interface_instr .)
    NUMBER          reduce using rule 5 (instrs -> interface_instr .)
    LPAREN          reduce using rule 5 (instrs -> interface_instr .)
    MINUS           reduce using rule 5 (instrs -> interface_instr .)
    LOGICALNEGATION reduce using rule 5 (instrs -> interface_instr .)
    TRUE            reduce using rule 5 (instrs -> interface_instr .)
    FALSE           reduce using rule 5 (instrs -> interface_instr .)
    $end            reduce using rule 5 (instrs -> interface_instr .)
    RBRACE          reduce using rule 5 (instrs -> interface_instr .)
    CASE            reduce using rule 5 (instrs -> interface_instr .)
    DEFAULT         reduce using rule 5 (instrs -> interface_instr .)


state 5

    (6) instr -> statement . SEMICOLON

    SEMICOLON       shift and go to state 46


state 6

    (7) instr -> statement_pop . SEMICOLON

    SEMICOLON       shift and go to state 47


state 7

    (8) instr -> statement_push . SEMICOLON

    SEMICOLON       shift and go to state 48


state 8

    (9) instr -> if_instr .

    INTERFACE       reduce using rule 9 (instr -> if_instr .)
    ID              reduce using rule 9 (instr -> if_instr .)
    IF              reduce using rule 9 (instr -> if_instr .)
    SWITCH          reduce using rule 9 (instr -> if_instr .)
    WHILE           reduce using rule 9 (instr -> if_instr .)
    FOR             reduce using rule 9 (instr -> if_instr .)
    BREAK           reduce using rule 9 (instr -> if_instr .)
    CONTINUE        reduce using rule 9 (instr -> if_instr .)
    CONSOLE         reduce using rule 9 (instr -> if_instr .)
    FUNCTION        reduce using rule 9 (instr -> if_instr .)
    RETURN          reduce using rule 9 (instr -> if_instr .)
    VAR             reduce using rule 9 (instr -> if_instr .)
    CONST           reduce using rule 9 (instr -> if_instr .)
    TYPEOF          reduce using rule 9 (instr -> if_instr .)
    FLOAT           reduce using rule 9 (instr -> if_instr .)
    STRING          reduce using rule 9 (instr -> if_instr .)
    NUMBER          reduce using rule 9 (instr -> if_instr .)
    LPAREN          reduce using rule 9 (instr -> if_instr .)
    MINUS           reduce using rule 9 (instr -> if_instr .)
    LOGICALNEGATION reduce using rule 9 (instr -> if_instr .)
    TRUE            reduce using rule 9 (instr -> if_instr .)
    FALSE           reduce using rule 9 (instr -> if_instr .)
    $end            reduce using rule 9 (instr -> if_instr .)
    RBRACE          reduce using rule 9 (instr -> if_instr .)
    CASE            reduce using rule 9 (instr -> if_instr .)
    DEFAULT         reduce using rule 9 (instr -> if_instr .)


state 9

    (10) instr -> switch_instr .

    INTERFACE       reduce using rule 10 (instr -> switch_instr .)
    ID              reduce using rule 10 (instr -> switch_instr .)
    IF              reduce using rule 10 (instr -> switch_instr .)
    SWITCH          reduce using rule 10 (instr -> switch_instr .)
    WHILE           reduce using rule 10 (instr -> switch_instr .)
    FOR             reduce using rule 10 (instr -> switch_instr .)
    BREAK           reduce using rule 10 (instr -> switch_instr .)
    CONTINUE        reduce using rule 10 (instr -> switch_instr .)
    CONSOLE         reduce using rule 10 (instr -> switch_instr .)
    FUNCTION        reduce using rule 10 (instr -> switch_instr .)
    RETURN          reduce using rule 10 (instr -> switch_instr .)
    VAR             reduce using rule 10 (instr -> switch_instr .)
    CONST           reduce using rule 10 (instr -> switch_instr .)
    TYPEOF          reduce using rule 10 (instr -> switch_instr .)
    FLOAT           reduce using rule 10 (instr -> switch_instr .)
    STRING          reduce using rule 10 (instr -> switch_instr .)
    NUMBER          reduce using rule 10 (instr -> switch_instr .)
    LPAREN          reduce using rule 10 (instr -> switch_instr .)
    MINUS           reduce using rule 10 (instr -> switch_instr .)
    LOGICALNEGATION reduce using rule 10 (instr -> switch_instr .)
    TRUE            reduce using rule 10 (instr -> switch_instr .)
    FALSE           reduce using rule 10 (instr -> switch_instr .)
    $end            reduce using rule 10 (instr -> switch_instr .)
    RBRACE          reduce using rule 10 (instr -> switch_instr .)
    CASE            reduce using rule 10 (instr -> switch_instr .)
    DEFAULT         reduce using rule 10 (instr -> switch_instr .)


state 10

    (11) instr -> while_instr .

    INTERFACE       reduce using rule 11 (instr -> while_instr .)
    ID              reduce using rule 11 (instr -> while_instr .)
    IF              reduce using rule 11 (instr -> while_instr .)
    SWITCH          reduce using rule 11 (instr -> while_instr .)
    WHILE           reduce using rule 11 (instr -> while_instr .)
    FOR             reduce using rule 11 (instr -> while_instr .)
    BREAK           reduce using rule 11 (instr -> while_instr .)
    CONTINUE        reduce using rule 11 (instr -> while_instr .)
    CONSOLE         reduce using rule 11 (instr -> while_instr .)
    FUNCTION        reduce using rule 11 (instr -> while_instr .)
    RETURN          reduce using rule 11 (instr -> while_instr .)
    VAR             reduce using rule 11 (instr -> while_instr .)
    CONST           reduce using rule 11 (instr -> while_instr .)
    TYPEOF          reduce using rule 11 (instr -> while_instr .)
    FLOAT           reduce using rule 11 (instr -> while_instr .)
    STRING          reduce using rule 11 (instr -> while_instr .)
    NUMBER          reduce using rule 11 (instr -> while_instr .)
    LPAREN          reduce using rule 11 (instr -> while_instr .)
    MINUS           reduce using rule 11 (instr -> while_instr .)
    LOGICALNEGATION reduce using rule 11 (instr -> while_instr .)
    TRUE            reduce using rule 11 (instr -> while_instr .)
    FALSE           reduce using rule 11 (instr -> while_instr .)
    $end            reduce using rule 11 (instr -> while_instr .)
    RBRACE          reduce using rule 11 (instr -> while_instr .)
    CASE            reduce using rule 11 (instr -> while_instr .)
    DEFAULT         reduce using rule 11 (instr -> while_instr .)


state 11

    (12) instr -> for_instr .

    INTERFACE       reduce using rule 12 (instr -> for_instr .)
    ID              reduce using rule 12 (instr -> for_instr .)
    IF              reduce using rule 12 (instr -> for_instr .)
    SWITCH          reduce using rule 12 (instr -> for_instr .)
    WHILE           reduce using rule 12 (instr -> for_instr .)
    FOR             reduce using rule 12 (instr -> for_instr .)
    BREAK           reduce using rule 12 (instr -> for_instr .)
    CONTINUE        reduce using rule 12 (instr -> for_instr .)
    CONSOLE         reduce using rule 12 (instr -> for_instr .)
    FUNCTION        reduce using rule 12 (instr -> for_instr .)
    RETURN          reduce using rule 12 (instr -> for_instr .)
    VAR             reduce using rule 12 (instr -> for_instr .)
    CONST           reduce using rule 12 (instr -> for_instr .)
    TYPEOF          reduce using rule 12 (instr -> for_instr .)
    FLOAT           reduce using rule 12 (instr -> for_instr .)
    STRING          reduce using rule 12 (instr -> for_instr .)
    NUMBER          reduce using rule 12 (instr -> for_instr .)
    LPAREN          reduce using rule 12 (instr -> for_instr .)
    MINUS           reduce using rule 12 (instr -> for_instr .)
    LOGICALNEGATION reduce using rule 12 (instr -> for_instr .)
    TRUE            reduce using rule 12 (instr -> for_instr .)
    FALSE           reduce using rule 12 (instr -> for_instr .)
    $end            reduce using rule 12 (instr -> for_instr .)
    RBRACE          reduce using rule 12 (instr -> for_instr .)
    CASE            reduce using rule 12 (instr -> for_instr .)
    DEFAULT         reduce using rule 12 (instr -> for_instr .)


state 12

    (13) instr -> for_each_instr .

    INTERFACE       reduce using rule 13 (instr -> for_each_instr .)
    ID              reduce using rule 13 (instr -> for_each_instr .)
    IF              reduce using rule 13 (instr -> for_each_instr .)
    SWITCH          reduce using rule 13 (instr -> for_each_instr .)
    WHILE           reduce using rule 13 (instr -> for_each_instr .)
    FOR             reduce using rule 13 (instr -> for_each_instr .)
    BREAK           reduce using rule 13 (instr -> for_each_instr .)
    CONTINUE        reduce using rule 13 (instr -> for_each_instr .)
    CONSOLE         reduce using rule 13 (instr -> for_each_instr .)
    FUNCTION        reduce using rule 13 (instr -> for_each_instr .)
    RETURN          reduce using rule 13 (instr -> for_each_instr .)
    VAR             reduce using rule 13 (instr -> for_each_instr .)
    CONST           reduce using rule 13 (instr -> for_each_instr .)
    TYPEOF          reduce using rule 13 (instr -> for_each_instr .)
    FLOAT           reduce using rule 13 (instr -> for_each_instr .)
    STRING          reduce using rule 13 (instr -> for_each_instr .)
    NUMBER          reduce using rule 13 (instr -> for_each_instr .)
    LPAREN          reduce using rule 13 (instr -> for_each_instr .)
    MINUS           reduce using rule 13 (instr -> for_each_instr .)
    LOGICALNEGATION reduce using rule 13 (instr -> for_each_instr .)
    TRUE            reduce using rule 13 (instr -> for_each_instr .)
    FALSE           reduce using rule 13 (instr -> for_each_instr .)
    $end            reduce using rule 13 (instr -> for_each_instr .)
    RBRACE          reduce using rule 13 (instr -> for_each_instr .)
    CASE            reduce using rule 13 (instr -> for_each_instr .)
    DEFAULT         reduce using rule 13 (instr -> for_each_instr .)


state 13

    (14) instr -> break_instr .
